--- a/playbook.yml
+++ b/playbook.yml
@@ -16,6 +16,10 @@
     with_items:
       - brew-cask
       - node
+      - docker
+      - boot2docker
+      - docker-compose
+
   -
     name: Install gems
     gem: name={{ item }} state=latest user_install=no
@@ -41,6 +45,7 @@
     with_items:
       - font-fira-mono
       - font-fira-mono-for-powerline
+      - virtualbox
       - iterm2
       - slack
       - skype
@@ -68,8 +73,19 @@
     name: install vim plugins
     shell: "vim +PluginInstall +qal"
   -
-    name: install Fira Mono into iTerm2
+    name: setup boot2docker
+    shell: boot2docker init
+  -
+    name: boot2docker up
+    shell: boot2docker up
+  -
+    name: setup iTerm2
     shell: /usr/libexec/PlistBuddy -c 'Set :"New Bookmarks":0:"{{ item.name }}" "{{ item.value }}"' ~/Library/Preferences/com.googlecode.iterm2.plist
     with_items:
-      - { name: "Normal Font", value: "Fira Mono 10" }
-      - { name: "Non Ascii Font", value: "Fira Mono 10" }
+      - { name: 'Normal Font', value: 'Fira Mono 10' }
+      - { name: 'Non Ascii Font', value: 'Fira Mono 10' }
+      - { name: 'Use Italic Font', value: 'false' }
+      - { name: 'Silence Bell', value: 'true' }
+      - { name: 'Flashing Bell', value: 'false' }
+      - { name: 'BM Growl', value: 'false' }
+      - { name: 'Scrollback Lines', value: '15000' }
