--- a/playbook.yml
+++ b/playbook.yml
@@ -19,6 +19,7 @@
       - docker
       - boot2docker
       - docker-compose
+      - wget
 
   -
     name: Install gems
@@ -66,6 +67,7 @@
     with_items:
       - vimrc
       - vimrc.bundles
+      - bashrc
       - gitconfig
       - gitignore_global
       - eslintrc
@@ -78,6 +80,9 @@
   -
     name: boot2docker up
     shell: boot2docker up
+  -
+    name: boot2docker DNS setup
+    shell: boot2docker ssh "echo 'EXTRA_ARGS=\"--dns 10.40.40.1 --dns 8.8.8.8\"' | sudo tee /var/lib/boot2docker/profile"
   -
     name: setup iTerm2
     shell: /usr/libexec/PlistBuddy -c 'Set :"New Bookmarks":0:"{{ item.name }}" "{{ item.value }}"' ~/Library/Preferences/com.googlecode.iterm2.plist
