--- a/playbook.yml
+++ b/playbook.yml
@@ -82,7 +82,7 @@
     shell: boot2docker up
   -
     name: boot2docker DNS setup
-    shell: boot2docker ssh "echo 'EXTRA_ARGS=\"--dns 10.40.40.1 --dns 8.8.8.8\"' | sudo tee /var/lib/boot2docker/profile"
+    shell: boot2docker ssh "echo 'EXTRA_ARGS=\"--dns 10.40.40.1 --dns 8.8.8.8 --insecure-registry registry.default.kube.ul.home\"' | sudo tee /var/lib/boot2docker/profile"
   -
     name: setup iTerm2
     shell: /usr/libexec/PlistBuddy -c 'Set :"New Bookmarks":0:"{{ item.name }}" "{{ item.value }}"' ~/Library/Preferences/com.googlecode.iterm2.plist
