Update font name

--- a/playbook.yml
+++ b/playbook.yml
@@ -107,8 +107,8 @@
     name: setup iTerm2
     shell: /usr/libexec/PlistBuddy -c 'Set :"New Bookmarks":0:"{{ item.name }}" "{{ item.value }}"' ~/Library/Preferences/com.googlecode.iterm2.plist
     with_items:
-      - { name: 'Normal Font', value: 'Fira Mono 10' }
-      - { name: 'Non Ascii Font', value: 'Fira Mono 10' }
+      - { name: 'Normal Font', value: 'FiraMono-Regular 9' }
+      - { name: 'Non Ascii Font', value: 'FiraMono-Regular 9' }
       - { name: 'Use Italic Font', value: 'false' }
       - { name: 'Silence Bell', value: 'true' }
       - { name: 'Flashing Bell', value: 'false' }
