--- a/playbook.yml
+++ b/playbook.yml
@@ -20,6 +20,7 @@
       - wget
       - the_silver_searcher
       - jsonpp
+      - elixir
 
   -
     name: Install gems
@@ -30,6 +31,7 @@
       - ruby-lint
       - sqlint
       - rubocop
+      - mdl
 
   -
     name: install npm packages
@@ -47,13 +49,40 @@
     homebrew_cask: name={{ item }} state=present
     with_items:
       - font-fira-mono
+      - font-roboto-mono
+      - font-hack
       - font-fira-mono-for-powerline
       - virtualbox
       - iterm2
       - slack
       - skype
       - lunchy
-      - dockertoolbox
+      # - dockertoolbox
+
+  -
+    name: Install Hex and Rebar
+    command: "mix {{ item.name }} --force"
+    args:
+      creates: "~/.mix/{{ item.file }}"
+    with_items:
+      - { name: "local.hex",   file: "archives/hex.ez" }
+      - { name: "local.rebar", file: "rebar" }
+
+  -
+    name: checkout Elixir packages
+    git: repo={{ item.repo }} dest=~/.elixir/packages/{{ item.name }} force=yes update=no
+    with_items:
+      - { name: "credo", repo: "git@github.com:rrrene/credo.git" }
+      - { name: "bunt",  repo: "https://github.com/rrrene/bunt" }
+
+  -
+    name: install Elixir packages
+    shell: mix deps.get && mix archive.build && mix archive.install --force
+    args:
+      chdir: ~/.elixir/packages/{{ item.name }}
+    with_items:
+      - { name: "bunt",  repo: "https://github.com/rrrene/bunt" }
+      - { name: "credo", repo: "git@github.com:rrrene/credo.git" }
 
   -
     name: install latest VIM
