--- a/playbook.yml
+++ b/playbook.yml
@@ -36,6 +36,7 @@
       - ruby-lint
       - sqlint
       - rubocop
+      - overcommit
       - mdl
 
   -
@@ -51,6 +52,8 @@
       - eslint-import-resolver-webpack
       - eslint-plugin-jsx-a11y
       - eslint-config-airbnb
+      - eslint-plugin-vue
+      - lint-staged
       - json-lint
       - bower
       - grunt-cli
@@ -65,12 +68,17 @@
       - font-roboto-mono
       - font-hack
       - font-fira-mono-for-powerline
-      - virtualbox
       - iterm2
       - slack
       - skype
+      - telegram-desktop
+      - hipchat
+      - firefox
+      - tunnelblick
+      - sourcetree
       - lunchy
-      # - dockertoolbox
+      - insomnia
+      - dockertoolbox
 
   -
     name: Install Hex and Rebar
