--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,12 @@
 sudo: required
 language: objective-c
 # 10.11 (see https://docs.travis-ci.com/user/osx-ci-environment/#OS-X-Version)
-osx_image: xcode7.3
+osx_image: xcode9.2
 
 before_install:
   # Uninstall existing brew installation.
-  - 'ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/uninstall)"'
-  - rm -rf /usr/local/Homebrew
-  - rm -rf /usr/local/Caskroom
-  - rm -rf /usr/local/bin/brew
+  # - 'ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/uninstall)" -- -f'
 
 script:
   # Test the playbook.
-  - "travis_wait 30 ./bootstrap.sh"
+  - ./bootstrap.sh
