--- a/tasks/vim.yml
+++ b/tasks/vim.yml
@@ -1,10 +1,13 @@
----
 - name: Install latest VIM
   homebrew:
     name: vim
     state: latest
-    update_homebrew: yes
     install_options: override-system-vi
+
+- name: Install ctags
+  homebrew:
+    name: universal-ctags/universal-ctags/universal-ctags
+    state: head
 
 - name: Setup plug autoload dir
   file:
