--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,25 @@
 ---
 sudo: required
-language: objective-c
-os: osx
-
-before_install:
-
 jobs:
   include:
-    - script: ./bootstrap.sh
-    - script: pip install ansible && ansible-playbook -i "localhost," -D -c local playbook.yml --syntax-check
-    - script: pip install ansible-lint && ansible-lint playbook.yml
+    - stage: playbook spec
+      os: osx
+      script: ./bootstrap.sh
+    - stage: playbook spec
+      language: python
+      dist: trusty
+      python:
+        - "3.6"
+      install:
+        - pip install --upgrade pip
+        - pip install ansible
+      script: ansible-playbook -i "localhost," -D -c local playbook.yml --syntax-check
+    - stage: playbook spec
+      language: python
+      dist: trusty
+      python:
+        - "3.6"
+      install:
+        - pip install --upgrade pip
+        - pip install ansible-lint
+      script: ansible-lint playbook.yml
