--- a/tasks/dotfiles.yml
+++ b/tasks/dotfiles.yml
@@ -22,6 +22,7 @@
     - gitignore_global
     - hgrc
     - hgignore
+  register: dotfiles
 
 - name: setup ~/.bashrc
   lineinfile:
@@ -30,4 +31,5 @@
     regexp: "bashrc"
 
 - name: load dotfiles
-  shell: source ~/.bashrc
+  command: source ~/.bashrc
+  when: dotfiles.changed
