Add spotify and java sdk

--- a/playbook.yml
+++ b/playbook.yml
@@ -39,6 +39,11 @@
          - langs
          - elixir
 
+    - name: Install Java SDK
+      include: tasks/java_sdk.yml
+      tags:
+        - javasdk
+
     - name: Install VIM
       include: tasks/vim.yml
       tags:
