--- a/playbook.yml
+++ b/playbook.yml
@@ -1,56 +1,35 @@
-- hosts: all
+- hosts: 127.0.0.1
+  connection: local
   become: false
-  tasks:
-    - name: Prepare
-      include: tasks/prepare.yml
+  vars:
+    os_family: "{{ ansible_facts['os_family'] | lower }}"
+  roles:
+    - name: Preapre
+      role: prepare
 
-    - name: Setup apps
-      include: tasks/apps.yml
-      tags:
-        - apps
+    - role: ruby
+      tags: ['langs', 'ruby']
 
-    - name: Install ruby
-      include: tasks/langs/ruby.yml
-      tags:
-         - langs
-         - ruby
+    - role: node
+      tags: ['langs', 'node']
 
-    - name: Install node
-      include: tasks/langs/node.yml
-      tags:
-         - langs
-         - node
+    - role: go
+      tags: ['langs', 'node']
 
-    - name: Install go
-      include: tasks/langs/go.yml
-      tags:
-         - langs
-         - go
+    - role: nim
+      tags: ['langs', 'nim']
 
-    - name: Install nim
-      include: tasks/langs/nim.yml
-      tags:
-         - langs
-         - nim
+    - role: elixir
+      tags: ['langs', 'elixir']
 
-    - name: Install elixir
-      include: tasks/langs/elixir.yml
-      tags:
-         - langs
-         - elixir
+    - role: java-sdk
+      tags: ['langs', 'java']
 
-    - name: Install Java SDK
-      include: tasks/java_sdk.yml
-      tags:
-        - javasdk
+    - role: apps
+      tags: ['apps']
 
-    - name: Install VIM
-      include: tasks/vim.yml
-      tags:
-        - apps
-        - vim
+    - role: vim
+      tags: ['apps', 'vim']
 
-    - name: Setup dotfiles
-      include: tasks/dotfiles.yml
-      tags:
-        - dotfiles
+    - role: dotfiles
+      tags: ['dotfiles']
