Spread dotfiles over roles

--- a/roles/node/tasks/main.yml
+++ b/roles/node/tasks/main.yml
@@ -34,7 +34,7 @@
 
 - name: Setup dotfiles
   template:
-    src: "dotfiles/{{ item }}"
+    src: "{{ item }}"
     dest: "~/.{{ item }}"
     force: yes
   with_items:
