--- a/roles/vim/tasks/main.yml
+++ b/roles/vim/tasks/main.yml
@@ -21,7 +21,7 @@
 
 - name: Setup vim dotfiles
   template:
-    src: "dotfiles/{{ item }}"
+    src: "{{ item }}"
     dest: "~/.{{ item }}"
     force: yes
   with_items:
