--- a/roles/go/tasks/install.darwin.yml
+++ b/roles/go/tasks/install.darwin.yml
@@ -1,7 +1,5 @@
 - name: Install brew packages
   homebrew:
-    name: "{{ item }}"
+    name:
+      - go
     state: latest
-  with_items:
-    - go
-
