Become and dotfiles fix

--- a/roles/dotfiles/tasks/main.yml
+++ b/roles/dotfiles/tasks/main.yml
@@ -12,7 +12,7 @@
 
 - name: setup dotfiles
   template:
-    src: "dotfiles/{{ item }}"
+    src: "{{ item }}"
     dest: "~/.{{ item }}"
     force: yes
   with_items:
