--- a/roles/node/tasks/main.yml
+++ b/roles/node/tasks/main.yml
@@ -8,9 +8,9 @@
   include: "setup.{{ os_family }}.yml"
   when: os_task.stat.exists
 
-- name: Install npm packages
-  npm:
-    name:
+- name: Register brew apps list
+  set_fact:
+    npm_packages:
       - eslint
       - livedown
       - babel-eslint
@@ -28,8 +28,13 @@
       - grunt-cli
       - stylelint
       - get-graphql-schema
+
+- name: Install npm packages
+  npm:
+    name: "{{ item }}"
     state: present
     global: yes
+  with_items: "{{ npm_packages }}"
 
 - name: Setup dotfiles
   template:
