--- a/roles/apps/tasks/debian.yml
+++ b/roles/apps/tasks/debian.yml
@@ -1,2 +1,22 @@
+- name: Install common packages
+  apt:
+    name:
+      - wget
+      - build-essential
+      - curl
+      - file
+      - git
+      - silversearcher-ag
+      - gpg
+      - ipcalc
+
 - name: Install docker
   include: debian.docker.yml
+
+- name: Install brew packages
+  homebrew:
+    name:
+      - hub
+      - fzf
+      - git-flow-avh
+    state: present
